--- a/nginx.conf
+++ b/nginx.conf
@@ -1,22 +1,13 @@
-#
 # nginx.conf
-# 
-# NGINX 编译配置：--with-http_sub_module 
-#
-
 # 用户和用户组
-user root root;
+user deploy;
 
 # 指令指定处理进程的数量。一般推荐为处理器的个数. 可以适当增加，以避免进程在堵塞在IO等待中
 worker_processes  4;
 
 # 错误日志[ debug | info | notice | warn | error | crit ] 
-error_log  /home/xuliwei/logs/nginx/error.log;
-
-
-# 指定 pid 存放的路径
-pid        logs/nginx.pid;
-
+error_log  /var/log/nginx/error.log;
+pid        /var/run/nginx.pid;
 
 events{
     # 事件模型[ kqueue | rtsig | epoll | /dev/poll | select | poll | eventport ]
@@ -27,7 +18,7 @@ events{
     # 作为反向代理：
     #     max_clients = worker_processes * worker_connections/4
     # 因此这两个数的乘积若大于系统最大可用tcp/ip栈数是没有意义的.
-    worker_connections  8192;
+    worker_connections  1024;
 }
 
 # HTTP 请求设置
@@ -39,19 +30,8 @@ http {
     # 默认类型
     default_type  application/octet-stream;
 
-    client_body_buffer_size  256k;
-    client_body_in_single_buffer on;
-
-    # fastcgi配置
-    include       fastcgi.conf;
-
-    # 日志的格式
-    log_format  main  '[$status]|[$request]|'
-                          '[$remote_addr]|[$http_user_agent]|[$http_referer]|'
-                          '[$http_header]|[$content_length]|[$request_body]';
-
     # 访问日志
-    access_log /home/xuliwei/logs/nginx/access.log  main;
+    access_log  /var/log/nginx/access.log;
 
     # sendfile 指令指定 nginx 是否调用 sendfile 函数（zero copy 方式）来输出文件，
     # 对于普通应用，必须设为 on。
@@ -60,17 +40,22 @@ http {
 
     #tcp_nopush     on;
 
-    #keepalive_timeout  0;
-    keepalive_timeout  30;
+    keepalive_timeout  65;
+
+    server_names_hash_bucket_size 128;
+
+    client_body_buffer_size 128k;
+    client_max_body_size 4M; 
 
     #gzip  on;
 
     # 设定负载均衡的服务器列表
     upstream tagslide {
-      server unix:///var/run/tagslide.sock weight=5;
-      server unix:///var/run/tagslide1.sock weight=5;
-      server unix:///var/run/tagslide2.sock weight=5;
-      server unix:///var/run/tagslide3.sock weight=5;
+      ip_hash;
+      server unix:///var/run/tagslide0.sock; 
+      server unix:///var/run/tagslide1.sock;
+      server unix:///var/run/tagslide2.sock;
+      server unix:///var/run/tagslide3.sock;
     }
     
     # 服务器设置
@@ -79,10 +64,15 @@ http {
         listen       80;
 
         # WEB服务主机名
-        server_name  www.tagslide.com 
+        server_name  www.tagslide.com tagslide.com; 
 
         # 字符集
         charset utf-8;
+        keepalive_timeout 5;
+        root /home/xuliwei/mycode/slide/public;
+
+        access_log /data/log/nginx/nginx.access.log;
+        error_log /data/log/nginx/nginx.error.log info;
 
         location / {
           proxy_pass http://tagslide; # match the name of upstream directive which is defined above
@@ -90,16 +80,16 @@ http {
           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
+        #./configure --add-module=/Users/mikewest/Repositories/nginx-static-etags
         location ~* ^/assets/ {
-          root /home/xuliwei/mycode/slide/public;
           expires max;
           add_header Cache-Control public;
           add_header Last-Modified "";
           add_header ETag "";
           break;
         }
+
         location ~* ^/uploads/ {
-          root /home/xuliwei/mycode/slide/public;
           expires max;
           add_header Cache-Control public;
           add_header Last-Modified "";
