modify nginx conf

--- a/nginx.conf
+++ b/nginx.conf
@@ -7,7 +7,7 @@ worker_processes  4;
 
 # 错误日志[ debug | info | notice | warn | error | crit ] 
 error_log  /var/log/nginx/error.log;
-pid        /var/run/nginx.pid;
+pid        /var/run/app/nginx.pid;
 
 events{
     # 事件模型[ kqueue | rtsig | epoll | /dev/poll | select | poll | eventport ]
@@ -25,13 +25,16 @@ events{
 http {
     server_tokens off;
 
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
+    # 访问日志
+    access_log  /var/log/nginx/access.log main;
     # 载入mime类型
     include       mime.types;
     # 默认类型
     default_type  application/octet-stream;
 
-    # 访问日志
-    access_log  /var/log/nginx/access.log;
 
     # sendfile 指令指定 nginx 是否调用 sendfile 函数（zero copy 方式）来输出文件，
     # 对于普通应用，必须设为 on。
@@ -40,22 +43,19 @@ http {
 
     #tcp_nopush     on;
 
-    keepalive_timeout  65;
+    keepalive_timeout  15;
 
     server_names_hash_bucket_size 128;
 
     client_body_buffer_size 128k;
-    client_max_body_size 4M; 
+    #max upload file is 10M
+    client_max_body_size 12M; 
 
     #gzip  on;
 
     # 设定负载均衡的服务器列表
     upstream tagslide {
-      ip_hash;
-      server unix:///var/run/tagslide0.sock; 
-      server unix:///var/run/tagslide1.sock;
-      server unix:///var/run/tagslide2.sock;
-      server unix:///var/run/tagslide3.sock;
+      server unix:///var/run/tagslide.sock; 
     }
     
     # 服务器设置
@@ -68,11 +68,12 @@ http {
 
         # 字符集
         charset utf-8;
-        keepalive_timeout 5;
-        root /home/xuliwei/mycode/slide/public;
+        keepalive_timeout 15;
+        root /home/deploy/tagslide/public;
 
-        access_log /data/log/nginx/nginx.access.log;
-        error_log /data/log/nginx/nginx.error.log info;
+        access_log /www/data/log/nginx/nginx.access.log main;
+        #[ debug | info | notice | warn | error | crit ] 
+        error_log  /www/data/log/nginx/nginx.error.log warn;
 
         location / {
           proxy_pass http://tagslide; # match the name of upstream directive which is defined above
@@ -82,7 +83,7 @@ http {
 
         #./configure --add-module=/Users/mikewest/Repositories/nginx-static-etags
         location ~* ^/assets/ {
-          expires max;
+          expires 10d;
           add_header Cache-Control public;
           add_header Last-Modified "";
           add_header ETag "";
@@ -90,6 +91,13 @@ http {
         }
 
         location ~* ^/uploads/ {
+          expires max;
+          add_header Cache-Control public;
+          add_header Last-Modified "";
+          break;
+        }
+        location ~* ^/slides/ {
+				  root /www/data;
           expires max;
           add_header Cache-Control public;
           add_header Last-Modified "";
